Forced the size of each menu item to prevent words in in the menu items from wrapping and causing the adjustments.

--- a/app/public/css/slide-out-menu.css
+++ b/app/public/css/slide-out-menu.css
@@ -49,6 +49,7 @@
     left: 9px;
 }
 .slide-out-menu li div {
+    width: 285px;
     margin-left: 34px;
     cursor: pointer;
 }
